--- a/views/partials/booking.jade
+++ b/views/partials/booking.jade
@@ -1,6 +1,6 @@
 div(ng-controller="BookingController")
     h3.partial-header.blue-text Booking
-    p(style="text-align: center; margin-left: 40px; margin-right: 40px; border-bottom: 1px solid;") Please leave your email along with a short description of the nature and location of the proposed show.    
+    p(style="text-align: center; margin-left: 40px; margin-right: 40px; border-bottom: 1px solid;") Please leave your name, email, and a short description of the nature and location of the proposed show.    
     div(style="margin-top: 20px;")
         div.input-label
             label Name:
