--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -1,10 +1,10 @@
-div(ng-controller="AboutController")
+div(ng-controller="AboutController" style="width: 100%;")
     h3.partial-header.blue-text About
-    p(style="margin-left: 80px;") We're Big Cat & the Show Girls, an idie pop-punk band from Cincinnati, OH.  Our new-age, unique sound is one to which listeners can easily connect.  Our influences include the Front Bottoms, Green Day, etc. etc. etc.  Read about the members below.  Let Big Cat touch your not only your ears, but also your soul with his beautiful, jarring vocals.  
+    p(style="margin-bottom: 1em;") We're Big Cat & the Show Girls, an idie pop-punk band from Cincinnati, OH.  Our new-age, unique sound is one to which listeners can easily connect.  Our influences include the Front Bottoms, Green Day, etc. etc. etc.  Read about the members below.  Let Big Cat touch your not only your ears, but also your soul with his beautiful, jarring vocals.  
     h4.partial-header.blue-text Members
     div.row
         div(ng-repeat="member in members" style="margin: 23px; display: flex; flex-direction: row; border-bottom: 1px solid;").col-md-12
-            div
+            div.img-container
                 img(ng-src="{{member.img_src}}" style="margin-bottom: 20px; border-radius: 3px;").member-img
             div(style="margin-left: 15px;")
                 p(style="margin-bottom: 20px; border-bottom: 1px solid; width: fit-content;") {{member.name}}, a.k.a {{member.aka}}
